--- a/Makefile.in
+++ b/Makefile.in
@@ -514,6 +514,16 @@ set_installuser=for installuser in $${LOGNAME} $${USERNAME} $${USER} \
 ## Note that the Makefiles in the etc directory are potentially useful
 ## in an installed Emacs, so should not be excluded.
 
+## Ensure that $subdir contains a subdirs.el file.
+write_subdir=if [ -f $${subdir}/subdirs.el ]; \
+	then true; \
+	else \
+	  (echo "(if (fboundp 'normal-top-level-add-subdirs-to-load-path)"; \
+	   echo "    (normal-top-level-add-subdirs-to-load-path))") \
+	    > $${subdir}/subdirs.el; \
+	fi; \
+	chmod a+r $${subdir}/subdirs.el
+
 install-arch-indep: mkdir info install-etc
 	-set ${COPYDESTS} ; \
 	unset CDPATH; \
@@ -553,22 +563,10 @@ install-arch-indep: mkdir info install-etc
 	done
 	-rm -f $(DESTDIR)${lispdir}/subdirs.el
 	$(srcdir)/update-subdirs $(DESTDIR)${lispdir}
-	if [ -f $(DESTDIR)${datadir}/emacs/${version}/site-lisp/subdirs.el ]; \
-	then true; \
-	else \
-	  (echo "(if (fboundp 'normal-top-level-add-subdirs-to-load-path)"; \
-	   echo "    (normal-top-level-add-subdirs-to-load-path))") \
-	    > $(DESTDIR)${datadir}/emacs/${version}/site-lisp/subdirs.el; \
-	fi
-	chmod a+r $(DESTDIR)${datadir}/emacs/${version}/site-lisp/subdirs.el
-	-if [ -f $(DESTDIR)${datadir}/emacs/site-lisp/subdirs.el ]; \
-	then true; \
-	else \
-	  (echo "(if (fboundp 'normal-top-level-add-subdirs-to-load-path)"; \
-	   echo "    (normal-top-level-add-subdirs-to-load-path))") \
-	    > $(DESTDIR)${datadir}/emacs/site-lisp/subdirs.el; \
-	fi
-	-chmod a+r $(DESTDIR)${datadir}/emacs/site-lisp/subdirs.el
+	subdir=$(DESTDIR)${datadir}/emacs/${version}/site-lisp ; \
+	  ${write_subdir}
+	subdir=$(DESTDIR)${datadir}/emacs/site-lisp ; \
+	  ${write_subdir} || true
 	-unset CDPATH; \
 	if [ `(cd ./etc; /bin/pwd)` != `(cd $(DESTDIR)${docdir}; /bin/pwd)` ]; \
 	then \
