--- a/Makefile.in
+++ b/Makefile.in
@@ -473,14 +473,17 @@ install-arch-dep: mkdir
 	  rm -f $(DESTDIR)${bindir}/$(EMACS) ; \
 	  ln $(DESTDIR)${bindir}/$(EMACSFULL) $(DESTDIR)${bindir}/$(EMACS) || true ; \
 	else \
-	  ( cd ${ns_appresdir} || exit 1 ; \
-	    if test -d share/emacs ; then \
-	      for dir in share/emacs/${version}/*; do \
-	        rm -fr `basename "$$dir"`; mv "$$dir" . ; \
-	      done ; \
-	    fi ; \
-	    rm -fr share ) ; \
+	  subdir=${ns_appresdir}/site-lisp; \
+	  ${MKDIR_P} $${subdir}; \
+	  ${write_subdir} || exit 1; \
+	  rm -rf ${ns_appresdir}/share; \
 	fi
+
+## In the share directory, we are deleting:
+## applications (with emacs.desktop)
+## emacs (basically empty)
+## icons (duplicates etc/images/icons/hicolor)
+## man   (maybe we should be installing this one, like info)
 
 ## http://lists.gnu.org/archive/html/emacs-devel/2007-10/msg01672.html
 ## Needs to be the user running install, so configure can't set it.
