--- a/Makefile.in
+++ b/Makefile.in
@@ -460,11 +460,12 @@ install: all install-arch-indep install-arch-dep install-leim blessmail
 write_subdir=if [ -f $${subdir}/subdirs.el ]; \
 	then true; \
 	else \
+	  umask 022; \
+	  ${MKDIR_P} $${subdir}; \
 	  (echo "(if (fboundp 'normal-top-level-add-subdirs-to-load-path)"; \
 	   echo "    (normal-top-level-add-subdirs-to-load-path))") \
 	    > $${subdir}/subdirs.el; \
-	fi; \
-	chmod a+r $${subdir}/subdirs.el
+	fi
 
 ### Install the executables that were compiled specifically for this machine.
 ### It would be nice to do something for a parallel make
@@ -484,7 +485,6 @@ install-arch-dep: mkdir
 	  ln $(DESTDIR)${bindir}/$(EMACSFULL) $(DESTDIR)${bindir}/$(EMACS) || true ; \
 	else \
 	  subdir=${ns_appresdir}/site-lisp; \
-	  ${MKDIR_P} $${subdir}; \
 	  ${write_subdir} || exit 1; \
 	  rm -rf ${ns_appresdir}/share; \
 	fi
@@ -659,7 +659,7 @@ install-leim: leim/Makefile mkdir
 install-strip:
 	$(MAKE) $(MFLAGS) INSTALL_STRIP=-s install
 
-### Build all the directories we're going to install Emacs in.
+### Build some of the directories we're going to install Emacs in.
 ### We set the umask so that any created directories are world-readable.
 ### FIXME it would be good to warn about non-standard permissions of
 ### pre-existing directories, but that does not seem easy.
@@ -675,8 +675,6 @@ mkdir: FRC
 	$(MKDIR_P) $(DESTDIR)${datadir} ${COPYDESTS} \
 	  $(DESTDIR)${infodir} $(DESTDIR)${man1dir} \
 	  $(DESTDIR)${bindir} $(DESTDIR)${docdir} $(DESTDIR)${libexecdir} \
-	  $(DESTDIR)${datadir}/emacs/site-lisp \
-	  $(DESTDIR)${datadir}/emacs/${version}/site-lisp \
 	  $(DESTDIR)`echo ${locallisppath} | sed 's,:, $(DESTDIR),g'` \
 	  $(DESTDIR)${desktopdir} $${icondirs}
 
