--- a/Makefile.in
+++ b/Makefile.in
@@ -446,9 +446,7 @@ $(srcdir)/src/stamp-h.in: $(AUTOCONF_INPUTS)
 
 .PHONY: install
 
-### We do install-arch-indep first because
-### the executable needs the Lisp files and DOC file to work properly.
-install: all install-arch-indep install-arch-dep install-leim blessmail
+install: all install-arch-indep install-arch-dep blessmail
 	@true
 
 ## Ensure that $subdir contains a subdirs.el file.
@@ -467,11 +465,9 @@ write_subdir=if [ -f $${subdir}/subdirs.el ]; \
 	fi
 
 ### Install the executables that were compiled specifically for this machine.
-### It would be nice to do something for a parallel make
-### to ensure that install-arch-indep finishes before this starts.
-### (TODO Why would it be nice?  Why not just make this depend on
-### install-arch-indep then?)
-install-arch-dep:
+### We do install-arch-indep first because the executable needs the
+### Lisp files and DOC file to work properly.
+install-arch-dep: install-arch-indep
 	umask 022; ${MKDIR_P} $(DESTDIR)${bindir}
 	(cd lib-src; \
 	  $(MAKE) install $(MFLAGS) prefix=${prefix} \
@@ -540,7 +536,7 @@ set_installuser=for installuser in $${LOGNAME} $${USERNAME} $${USER} \
 ## Is it really Emacs's job to create those directories?
 ## Should we also be ensuring they contain subdirs.el files?
 ## It would be easy to do, just use write_subdir.
-install-arch-indep: info install-etc
+install-arch-indep: info install-etc install-leim
 	umask 022 ; \
 	  $(MKDIR_P) $(DESTDIR)`echo ${locallisppath} | sed 's,:, $(DESTDIR),g'`
 	-set ${COPYDESTS} ; \
