--- a/configure.in
+++ b/configure.in
@@ -1599,6 +1599,7 @@ if test "${HAVE_NS}" = yes; then
      dnl FIXME maybe set datarootdir instead.
      dnl That would also get applications, icons, man.
      infodir="\${ns_appresdir}/info"
+     mandir="\${ns_appresdir}/man"
      lispdir="\${ns_appresdir}/lisp"
      LEIM_INSTALLDIR="\${ns_appresdir}/leim"
      INSTALL_ARCH_INDEP_EXTRA=
