--- a/Makefile.in
+++ b/Makefile.in
@@ -483,10 +483,9 @@ install-arch-dep: install-arch-indep
 	fi
 
 ## In the share directory, we are deleting:
-## applications (with emacs.desktop)
-## emacs (basically empty)
+## applications (with emacs.desktop, also found in etc/)
+## emacs (basically empty except for unneeded site-lisp directories)
 ## icons (duplicates etc/images/icons/hicolor)
-## man   (maybe we should be installing this one, like info)
 
 ## This is install-etc for everything except self-contained-ns builds.
 ## For them, it is empty.
@@ -504,19 +503,9 @@ set_installuser=for installuser in $${LOGNAME} $${USERNAME} $${USER} \
 ### the exception is the DOC-* files, which are copied
 ### from the build directory.
 
-## Note that we copy DOC* and then delete DOC
-## as a workaround for a bug in tar on Ultrix 4.2.
-## Ultrix is no longer supported since 23.1, but the relevant line
-## has another effect.  We copy the entire etc/ directory from the
-## source tree first.  For an in-tree build, this will include
-## any DOC* files there may be.  So rm DOC does have an effect.
 ## FIXME When we copy etc we should exclude DOC*, then copy only
 ## the relevant one.  We cannot delete DOC* from the destination directory,
 ## because that may include pre-existing files from another emacs.
-
-## We install only the relevant DOC file if possible
-## (ie DOC-${version}.buildnumber), otherwise DOC-${version}*.
-## (Note "otherwise" is inaccurate since 2009-08-23.)
 
 ## Note that the Makefiles in the etc directory are potentially useful
 ## in an installed Emacs, so should not be excluded.
@@ -534,7 +523,7 @@ set_installuser=for installuser in $${LOGNAME} $${USERNAME} $${USER} \
 ## Is it really Emacs's job to create those directories?
 ## Should we also be ensuring they contain subdirs.el files?
 ## It would be easy to do, just use write_subdir.
-install-arch-indep: info install-leim ${INSTALL_ARCH_INDEP_EXTRA}
+install-arch-indep: install-leim install-doc install-info install-man ${INSTALL_ARCH_INDEP_EXTRA}
 	umask 022 ; \
 	  $(MKDIR_P) $(DESTDIR)`echo ${locallisppath} | sed 's,:, $(DESTDIR),g'`
 	-set ${COPYDESTS} ; \
@@ -574,6 +563,27 @@ install-arch-indep: info install-leim ${INSTALL_ARCH_INDEP_EXTRA}
 	subdir=$(DESTDIR)${datadir}/emacs/site-lisp ; \
 	  ${write_subdir} || true
 	-unset CDPATH; \
+	if [ -n "${GZIP_PROG}" ]; \
+	then \
+	   echo "Compressing *.el ..." ; \
+	   (cd $(DESTDIR)${lispdir}; for f in `find . -name "*.elc" -print`; do \
+		${GZIP_PROG} -9n `echo $$f|sed 's/.elc$$/.el/'` ; \
+	    done) \
+	else true; fi
+	-chmod -R a+r $(DESTDIR)${datadir}/emacs/${version} ${COPYDESTS}
+
+## We install only the relevant DOC file if possible
+## (ie DOC-${version}.buildnumber), otherwise DOC-${version}*.
+## (Note "otherwise" is inaccurate since 2009-08-23.)
+
+## Note that we copy DOC* and then delete DOC
+## as a workaround for a bug in tar on Ultrix 4.2.
+## Ultrix is no longer supported since 23.1, but the relevant line
+## has another effect.  We copy the entire etc/ directory from the
+## source tree first.  For an in-tree build, this will include
+## any DOC* files there may be.  So rm DOC does have an effect.
+install-doc:
+	-unset CDPATH; \
 	umask 022; ${MKDIR_P} $(DESTDIR)${docdir} ; \
 	if [ `(cd ./etc; /bin/pwd)` != `(cd $(DESTDIR)${docdir}; /bin/pwd)` ]; \
 	then \
@@ -591,14 +601,8 @@ install-arch-indep: info install-leim ${INSTALL_ARCH_INDEP_EXTRA}
 	    chown $${installuser} DOC*; \
 	    if test "`echo DOC-*`" != "DOC-*"; then rm -f DOC; fi); \
 	else true; fi
-	-unset CDPATH; \
-	if [ -n "${GZIP_PROG}" ]; \
-	then \
-	   echo "Compressing *.el ..." ; \
-	   (cd $(DESTDIR)${lispdir}; for f in `find . -name "*.elc" -print`; do \
-		${GZIP_PROG} -9n `echo $$f|sed 's/.elc$$/.el/'` ; \
-	    done) \
-	else true; fi
+
+install-info: info
 	umask 022; ${MKDIR_P} $(DESTDIR)${infodir}
 	-unset CDPATH; \
 	thisdir=`/bin/pwd`; \
@@ -626,7 +630,8 @@ install-arch-indep: info install-leim ${INSTALL_ARCH_INDEP_EXTRA}
 	      ${INSTALL_INFO} --info-dir=$(DESTDIR)${infodir} $(DESTDIR)${infodir}/$$elt); \
 	   done); \
 	else true; fi
-	-chmod -R a+r $(DESTDIR)${datadir}/emacs/${version} ${COPYDESTS}
+
+install-man:
 	umask 022; ${MKDIR_P} $(DESTDIR)${man1dir}
 	thisdir=`/bin/pwd`; \
 	cd ${mansrcdir}; \
