--- a/Makefile.in
+++ b/Makefile.in
@@ -532,7 +532,6 @@ install-arch-indep: install-leim install-info install-man ${INSTALL_ARCH_INDEP_E
 	   [ "$${dir}" != "${srcdir}/etc" ] || rm -f $${dest}/DOC* ; \
 	   find $${dest} -exec chown $${installuser} {} ';' ;\
 	   for subdir in `find $${dest} -type d -print` ; do \
-	     chmod a+rx $${subdir} ; \
 	     rm -f  $${subdir}/.gitignore ; \
 	     rm -f  $${subdir}/.arch-inventory ; \
 	     rm -f  $${subdir}/.DS_Store ; \
@@ -546,7 +545,7 @@ install-arch-indep: install-leim install-info install-man ${INSTALL_ARCH_INDEP_E
 	   done) ; \
 	done
 	-rm -f $(DESTDIR)${lispdir}/subdirs.el
-	$(srcdir)/update-subdirs $(DESTDIR)${lispdir}
+	umask 022; $(srcdir)/update-subdirs $(DESTDIR)${lispdir}
 	subdir=$(DESTDIR)${datadir}/emacs/${version}/site-lisp ; \
 	  ${write_subdir}
 	subdir=$(DESTDIR)${datadir}/emacs/site-lisp ; \
@@ -559,6 +558,8 @@ install-arch-indep: install-leim install-info install-man ${INSTALL_ARCH_INDEP_E
 	      ${GZIP_PROG} -9n `echo $$f|sed 's/.elc$$/.el/'` ; \
 	    done )
 	-chmod -R a+r $(DESTDIR)${datadir}/emacs/${version} ${COPYDESTS}
+
+# The last chmod isn't needed at present.
 
 ## We install only the relevant DOC file if possible
 ## (ie DOC-${version}.buildnumber), otherwise DOC-${version}*.
