--- a/Makefile.in
+++ b/Makefile.in
@@ -525,24 +525,20 @@ install-arch-indep: install-leim install-info install-man ${INSTALL_ARCH_INDEP_E
 	    continue ; \
 	  rm -rf $${dest} ; \
 	  umask 022; ${MKDIR_P} $${dest} ; \
-	  (echo "Copying $${dir} to $${dest}..." ; \
-	   (cd $${dir}; tar -chf - . ) \
-	     | (cd $${dest}; umask 022; \
-		tar -xvf - && cat > /dev/null) || exit 1; \
-	   [ "$${dir}" != "${srcdir}/etc" ] || rm -f $${dest}/DOC* ; \
-	   find $${dest} -exec chown $${installuser} {} ';' ;\
-	   for subdir in `find $${dest} -type d -print` ; do \
-	     rm -f  $${subdir}/.gitignore ; \
-	     rm -f  $${subdir}/.arch-inventory ; \
-	     rm -f  $${subdir}/.DS_Store ; \
-	     rm -f  $${subdir}/\#* ; \
-	     rm -f  $${subdir}/.\#* ; \
-	     rm -f  $${subdir}/*~ ; \
-	     rm -f  $${subdir}/*.orig ; \
-	     [ "$${dir}" != "${srcdir}/etc" ] && \
-	      rm -f $${subdir}/[mM]akefile*[.-]in $${subdir}/[mM]akefile ; \
-	     rm -f  $${subdir}/ChangeLog* ; \
-	   done) ; \
+	  echo "Copying $${dir} to $${dest}..." ; \
+	  (cd $${dir}; tar -chf - . ) \
+	    | (cd $${dest}; umask 022; \
+	       tar -xvf - && cat > /dev/null) || exit 1; \
+	  [ "$${dir}" != "${srcdir}/etc" ] || rm -f $${dest}/DOC* ; \
+	  for subdir in `find $${dest} -type d -print` ; do \
+	    rm -f $${subdir}/.gitignore $${subdir}/.arch-inventory \
+	      $${subdir}/.DS_Store  $${subdir}/ChangeLog* \
+	      $${subdir}/\#*        $${subdir}/.\#*  \
+	      $${subdir}/*~         $${subdir}/*.orig ; \
+	    [ "$${dir}" != "${srcdir}/etc" ] && \
+	     rm -f $${subdir}/[mM]akefile*[.-]in $${subdir}/[mM]akefile ; \
+	  done ; \
+	  find $${dest} -exec chown $${installuser} {} ';' ;\
 	done
 	-rm -f $(DESTDIR)${lispdir}/subdirs.el
 	umask 022; $(srcdir)/update-subdirs $(DESTDIR)${lispdir}
